Fixed ParseFloat bug, receipt object creation complete (need to try other receipts to make sure it actually works)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "stdlib.h": "c",
         "stdbool.h": "c",
         "stdint.h": "c",
-        "models.h": "c"
+        "models.h": "c",
+        "helperfunctions.h": "c",
+        "receipt.h": "c"
     }
 }
